[tool.poetry]
name = "g-dev-fest"
version = "0.1.0"
description = ""
authors = ["Akash Shetty"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.7"
langchain-openai = "^0.2.5"
langgraph = "^0.2.44"
langsmith = "^0.1.139"
langchain-core = "^0.3.15"
langchain-google-genai = "^2.0.4"
langchain-community = "^0.3.5"
wikipedia = "^1.4.0"
pandas = "^2.2.3"
langchain-experimental = "^0.3.2"
matplotlib = "^3.9.2"
numexpr = "^2.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
